Updated storage usage

--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,9 @@
     "host_permissions": [
         "https://*/*",
         "http://*/*"
+    ],
+    "permissions": [
+        "storage",
+        "contextMenus"
     ]
 }
