--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.314.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-unique-hooks": "^0.1.10"
+    "react-unique-hooks": "^0.1.10",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.23",
+    "@types/chrome": "^0.0.258",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/sort-by": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
