--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,11 @@
         "clsx",
         "crxjs",
         "Flikr",
+        "flikrui",
         "lucide",
         "newtab",
-        "tailwindcss"
+        "Signin",
+        "tailwindcss",
+        "tippyjs"
     ]
 }
