--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.6.5",
+    "flikrui": "^0.0.10",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.314.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "react-unique-hooks": "^0.1.10",
     "sort-by": "^1.2.0"
   },
