--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,13 @@
         "flikrui",
         "lucide",
         "newtab",
+        "Shivam",
         "Signin",
+        "Sono",
+        "svgr",
         "tailwindcss",
-        "tippyjs"
+        "tippyjs",
+        "Unfonts",
+        "unplugin"
     ]
 }
