--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "unplugin-fonts": "^1.1.1",
+    "vite": "^5.0.8",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
